# JobListingApi

./: .env  .gitignore  docker-compose.yaml  pyproject.toml
api/: main.py
api/apps/auth/: responses.py  router.py
api/apps/auth/user/: requests.py  responses.py  router.py
api/apps/job_listing/: router.py
api/apps/testapp/: router.py
api/models/: job_listing.py  listing_shortlist.py
api/repositories/: base.py  exceptions.py  factory.py  schemas.py
api/services/: auth.py  data_import.py  document.py  exceptions.py  factory.py  job_listing.py  schemas.py
src/: main.py  pyproject.toml
src/apps/: schemas.py
src/apps/auth/: requests.py  responses.py  router.py
src/apps/auth/requests/: __init__.py  create_user.py
src/apps/auth/user/: requests.py  router.py
src/apps/job_listing/: router.py
src/apps/testapp/: router.py
src/models/: base.py  job_listing.py  user.py
src/repositories/: base.py  exceptions.py  factory.py  job_listing.py  schemas.py  user.py  utils.py
src/services/: auth.py  base.py  data_import.py  document.py  exceptions.py  schemas.py
tests/: test_api_auth.py  test_auth_service.py  test_document_service.py  test_repository_base.py  test_user_repository.py  utils.py
webapp/: package-lock.json  package.json  tsconfig.app.json  vite.config.ts
webapp/src/: main.tsx
webapp/src/app/: providers.tsx  router.tsx
webapp/src/features/home/components/: HomeSection.tsx
webapp/src/features/home/pages/: HomePage.tsx
webapp/src/features/job_listing/api/: api.ts  index.ts
webapp/src/shared/api/: client.ts  common.dto.ts
(+5 files in other folders)
