[project]
name = "job-listing-api"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "beanie>=2.0.0",
    "fastapi[standard]>=0.118.0",
    "motor>=3.7.1",
    "pymongo>=4.15.2",
]

[dependency-groups]
dev = [
    "pytest>=8.4.2",
    "pytest-asyncio>=1.2.0",
    "pytest-dotenv>=0.5.2",
    "pytest-mock>=3.15.1",
]

[tool.pytest.ini_options]
minversion = "8.4.2"
pythonpath = [
  "src"
]
testpaths = [
    "tests",
]
env_files=[
    ".env",
]
