[project]
name = "job-listing-api"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "beanie>=2.0.0",
    "fastapi[standard]>=0.118.0",
    "motor>=3.7.1",
    "pwdlib[argon2]>=0.2.1",
    "pyjwt>=2.10.1",
    "pymongo>=4.15.2",
]

[dependency-groups]
dev = [
    "aiohttp>=3.13.1",
    "pytest>=8.4.2",
    "pytest-asyncio>=1.2.0",
    "pytest-dotenv>=0.5.2",
    "pytest-mock>=3.15.1",
]

[tool.pytest.ini_options]
minversion = "8.4.2"

log_file = "tests/test_logs/pytest.log"
log_file_level = "INFO"
log_file_format = "%(asctime)s [%(levelname)8s] %(message)s (%(filename)s:%(lineno)s)"
log_file_date_format = "%Y-%m-%d %H:%M:%S"

pythonpath = [
  "src"
]
testpaths = [
    "tests",
]
env_files=[
    ".env",
]
